Remove defunct azure and rules modules